Some html stuff

--- a/src/templates/home_page.html
+++ b/src/templates/home_page.html
@@ -5,6 +5,11 @@
     <title>Placeholder Title Rotten Homepage</title>
 </head>
 <body>
+<div class="nav-header">
 
+</div>
+<div class="footer">
+    
+</div>
 </body>
 </html>
