--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -9,7 +9,7 @@
 
 </div>
 <div align="center" class="login-form">
-    <div>
+    <div class="login-title">
         <h4>Please Login</h4>
     </div>
     <div>
@@ -18,7 +18,7 @@
             <input type="text" id="username" name="username">
             <br>
             <label for="password">Password</label>
-            <input type="text" id="password" name="password">
+            <input type="password" id="password" name="password">
             <br><br>
             <input type="submit" value="Login">
         </form>
