--- a/foodwastage/wastagerecord/templates/wastagerecord/login.html
+++ b/foodwastage/wastagerecord/templates/wastagerecord/login.html
@@ -13,7 +13,8 @@
         <h4>Please Login</h4>
     </div>
     <div>
-        <form action="/home/" method="post">
+        <form action="login_check/" method="post">
+            {% csrf_token %}
             <label for="username">Username</label>
             <input type="text" id="username" name="username">
             <br>
